--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 /* Desktop Navigation */
 
-span :before {
+.rotate :before {
   content: '';
   animation: animate infinite 8s;
 }
